--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>창희&amp;유선의 wedding day</title>
-
     <link rel="stylesheet" href="css/common1.css">
-    <link rel="stylesheet" href="css/main.css">
-    
-    <script src="js/jquery-1.12.3.js"></script>
-    <script src="js/jquery.bxslider.js"></script>
-   
+    <link rel="stylesheet" href="css/main.css">    
+    <script src="js/jquery-3.4.1.min.js"></script>   
    <script src="js/main.js"></script>
 </head>
 
