--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+    <meta property="og:images" content="images/kakao.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ppkkee717.github.io/ch_ys/">
+    <meta property="og:title" content="창희 그리고 유선 wadding day">
+    <meta property="og:description" content="2020년 3월 21일 (토) 오후4시">
+    
     <title>창희&amp;유선의 wedding day</title>
     <link rel="stylesheet" href="css/common1.css">
     <link rel="stylesheet" href="css/main.css">    
@@ -27,7 +33,7 @@
         </div>
         <div class="text">
             <p class="day">2020년 3월 21일 (토) 오후4시</p>
-            <p class="place">파티움하우스 더 그레이스 켈리</p>
+            <p class="place">파티움하우스 더 그레이스 켈리 1층</p>
             <div class="invite">
                 <h2>모시는글</h2>
                 <p class="inviteT">
