--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:images" content="images/kakao.jpg">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ppkkee717.github.io/ch_ys/">
-    <meta property="og:title" content="창희 그리고 유선 wadding day">
+    <meta property="og:title" content="창희&유선 wadding day">
     <meta property="og:description" content="2020년 3월 21일 (토) 오후4시">
     
     <title>창희&amp;유선의 wedding day</title>
