--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta property="og:images" content="images/kakao.jpg">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ppkkee717.github.io/ch_ys/">
-    <meta property="og:title" content="창희&유선 wadding day">
+    <meta property="og:title" content="창희&유선 wedding day">
     <meta property="og:description" content="2020년 3월 21일 (토) 오후4시">
     
     <title>창희&amp;유선의 wedding day</title>
     <link rel="stylesheet" href="css/common1.css">
     <link rel="stylesheet" href="css/main.css">    
-    <script src="js/jquery-3.4.1.min.js"></script>   
+    <script src="js/jquery-3.4.1.min.js"></script>   ss
    <script src="js/main.js"></script>
 </head>
 
