--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <meta property="og:images" content="images/kakao.jpg">
+    <meta property="og:images" content="https://ppkkee717.github.io/ch_ys/images/kakao.jpg">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ppkkee717.github.io/ch_ys/">
     <meta property="og:title" content="창희&유선 wedding day">
@@ -13,7 +13,7 @@
     <title>창희&amp;유선의 wedding day</title>
     <link rel="stylesheet" href="css/common1.css">
     <link rel="stylesheet" href="css/main.css">    
-    <script src="js/jquery-3.4.1.min.js"></script>   ss
+    <script src="js/jquery-3.4.1.min.js"></script> 
    <script src="js/main.js"></script>
 </head>
 
@@ -126,7 +126,7 @@
             </table>
             <div class="calT">
                 <strong>2020년 3월21일 (토) 오후4시</strong>
-                <p>파티움하우스 더 그레이스켈리</p>
+                <p>파티움하우스 더 그레이스켈리 1층</p>
                 <p>경기 수원시 팔달구 효원로 296</p>
             </div>
         </div>
