--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <meta property="og:images" content="https://ppkkee717.github.io/ch_ys/images/kakao.jpg">
+    <meta property="og:image" content="https://ppkkee717.github.io/ch_ys/images/kakao.jpg">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ppkkee717.github.io/ch_ys/">
     <meta property="og:title" content="창희&유선 wedding day">
