--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/common1.css">
     <link rel="stylesheet" href="css/main.css">    
     <script src="js/jquery-3.4.1.min.js"></script> 
-   <script src="js/main.js"></script>
+   <script src="js/main2.js"></script>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="text">
-            <p class="day">2020년 3월 21일 (토) 오후4시</p>
+            <p class="day">2020년 4월 25일 (토) 오후4시</p>
             <p class="place">파티움하우스 더 그레이스 켈리 1층</p>
             <div class="invite">
                 <h2>모시는글</h2>
@@ -111,7 +111,7 @@
                     <!-- label은 마우스로 클릭을 편하게 해줌 -->
                     <td></td>
                     <td align="center" id="tbCalendarYM" colspan="5">
-                        03</td>
+                        04</td>
 
                 </tr>
                 <tr class="week">
@@ -123,9 +123,54 @@
                     <td align="center">fri</td>
                     <td align="center">sat</td>
                 </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>6</td>
+                    <td>7</td>
+                    <td>8</td>
+                    <td>9</td>
+                    <td>10</td>
+                    <td>11</td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td>13</td>
+                    <td>14</td>
+                    <td>15</td>
+                    <td>16</td>
+                    <td>17</td>
+                    <td>18</td>
+                </tr>
+                <tr>
+                    <td>19</td>
+                    <td>20</td>
+                    <td>21</td>
+                    <td>22</td>
+                    <td>23</td>
+                    <td>24</td>
+                    <td class="d-day">25</td>
+                </tr>
+                <tr>
+                    <td>26</td>
+                    <td>27</td>
+                    <td>28</td>
+                    <td>29</td>
+                    <td>30</td>
+                    <td></td>
+                    <td></td>
+                </tr>
             </table>
             <div class="calT">
-                <strong>2020년 3월21일 (토) 오후4시</strong>
+                <strong>2020년 4월25일 (토) 오후4시</strong>
                 <p>파티움하우스 더 그레이스켈리 1층</p>
                 <p>경기 수원시 팔달구 효원로 296</p>
             </div>
